--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,14 @@
     z-index: 99;
 }
 
+.whatsapp-icon {
+    position: fixed;
+    display: none;
+    left: 45px;
+    bottom: 45px;
+    z-index: 99;
+}
+
 
 /*** Spinner ***/
 #spinner {
